# DANFE

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  app.py  coderabbit-prompt.txt  config.yaml  danfe_gerador.py  docker-compose.dev.yml  docker-compose.yml  main.py  nfe_exemplo.xml  pyproject.toml  requirements.txt  run_app.sh
.agent/rules/: python.md
.agent/workflows/: python-lint.md
.streamlit/: config.toml
danfes_saida/: nfe_teste
data/xmls/: nfe_completa_exemplo.xml
docs/: API.md  Tabela_NCM_Vigente_20251207.json  XML_STRUCTURE.md  XML_TAGS_REFERENCE.md
scripts/: generate_test_assets.py
src/danfe_generator/: __init__.py  exceptions.py
src/danfe_generator/cli/: __init__.py  main.py
src/danfe_generator/core/: __init__.py  config.py  generator.py  validators.py
src/danfe_generator/data/: cfop.csv
src/danfe_generator/utils/: __init__.py  colors.py  file_handlers.py
src/danfe_generator/web/: __init__.py  app.py  ux_ui_prompt_versaoweb.md
src/danfe_generator/web/components/: __init__.py  icons.py  layout.py
src/danfe_generator/web/logic/: models.py  validators.py  xml_builder.py
src/danfe_generator/web/views/: create.py  upload.py
tests/: __init__.py  conftest.py  test_config.py  test_generator.py  test_utils.py  test_validators.py
tests/web/: test_models.py  test_validators.py  test_xml_builder.py
utils/: gerar_assets_teste.py
xmls/: nfe_teste.xml
